# alicemq_amqprs

./: .gitignore  Cargo.toml  README.md  erl_crash.dump  output.json
alicemq/: Cargo.toml  README.md
alicemq/src/: base.rs  callback.rs  callbacks.rs  connection_arguments.rs  constants.rs  consumer.rs  enums.rs  lib.rs  publisher.rs  traits.rs
alicemq/src/clients/: consumer_client.rs  mod.rs  publisher_client.rs
alicemq/src/consumers/: base_consumer.rs  mod.rs
alicemq/src/settings/: base.rs  configuration.rs  constants.rs  mod.rs
examples/: Cargo.toml  hello.rs  open_connection.rs
examples/src/: basic_consume_publish.rs  basic_consume_publish_no_ack.rs  basic_publish.rs  callback_pattern.rs  create_new_connection.rs  custom_callback_handler.rs  handler_consumer.rs  handler_multiple_queues.rs  open_connection.rs  playground.rs  pub_subsriber.rs  publisher_multiple_queues.rs  queue_hashmap.rs
usage_examples/: Cargo.toml
usage_examples/src/: basic_consumer.rs  basic_publish_serialised.rs  basic_publisher.rs
