[package]
name = "alicemq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
amqprs = { version = "1" }
tracing = { version = "0.1.37" }
dotenv = { version = "0.15.0" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
