[package]
name = "alicemq"
version = "0.1.3"
edition = "2021"
rust-version = "1.68.0"
license = "MIT"
readme = "README.md"
description = "Wapper for the amqprs rabbitMQ library."
keywords = ["rabbitmq", "async", "tokio"]
categories = ["network-programming", "asynchronous"]

[dependencies]
tokio = { version = "1", features = ["full"]}
amqprs = { version = "1" }
tracing = { version = "0.1.37" }
dotenv = { version = "0.15.0" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
thiserror = { version = "1.0.38"}
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0" }