[package]
name = "alicemq_usage_examples"
publish = false
version = "0.1.1"
edition = "2021"

[dependencies]
uuid = { version = "1.5.0", features = ["v4"] }

[dev-dependencies]
alicemq = { path = "../alicemq" }
tokio = { version = "1", features = ["full"]}
amqprs = { version = "1" }
tracing = { version = "0.1.37" }
dotenv = { version = "0.15.0" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
async-trait = "0.1"

[[example]]
name = "basic_consumer"
path = "src/basic_consumer.rs"
